# healthpassportsg-app

./: .dockerignore  .gitignore  README.md  Result.json  app.py  dockerfile  entrypoint.py  healthpassportsg.db  install_ocr.sh  pyproject.toml  requirements.txt  requirements_ocr.txt  vercel.json
helpers/: login.py  sql.py
services/: ocr.py
static/: schema.sql  styles.css
templates/: index.html  layout.html  login.html  profile.html  record.html  register.html  upload.html  view.html
