[project]
name = "healthpassportsg-app"
version = "0.1.0"
authors = [
    { name = "Chou Hui Shan", email = "huishaan@live.com" },
    { name = "Felicia Farm", email = "felicia.farm1997@gmail.com" },
    { name = "Daniel Jovin", email = "danieljovin1@gmail.com" },
    { name = "Yash Mishra", email = "bounty.yash@gmail.com" },
    { name = "Sneha Saravanan", email = "sneha221102@gmail.com" },
]
description = '''Giving Migrant Workers Ownership of their Health: 
    A multilingual, privacy-first health record platform empowering 
    Singapore's migrant workers
'''
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask~=3.1.1",
    "flask-session~=0.8.0",
    "pytz~=2025.2",
    "requests~=2.32.4",
]

[dependency-groups]
dev = ["ruff>=0.12.9"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # isort
    "I",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"


# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
